[gd_scene load_steps=65 format=2]

[ext_resource path="res://scripts/host/HostMain.gd" type="Script" id=1]
[ext_resource path="res://scenes/Environment.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/salma-pro/Medium.otf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" type="Script" id=5]
[ext_resource path="res://assets/Global.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/host/StartButton.gd" type="Script" id=7]
[ext_resource path="res://sprites/block.png" type="Texture" id=8]
[ext_resource path="res://scenes/blocks/Intro.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/blocks/Question.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/blocks/End.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/blocks/Start.tscn" type="PackedScene" id=12]
[ext_resource path="res://fonts/sunny-spells/Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://sprites/pointer.svg" type="Texture" id=14]
[ext_resource path="res://scripts/host/NextBlockButton.gd" type="Script" id=15]
[ext_resource path="res://sprites/plus.svg" type="Texture" id=16]
[ext_resource path="res://fonts/open-sans/ExtraBold.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://sprites/minus.svg" type="Texture" id=18]
[ext_resource path="res://scripts/PlayerListScript.gd" type="Script" id=19]
[ext_resource path="res://sprites/operations/edit.svg" type="Texture" id=20]
[ext_resource path="res://scripts/menus/BackgroundRotation.gd" type="Script" id=21]
[ext_resource path="res://fonts/andika-basic/Regular.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://sprites/pattern.svg" type="Texture" id=23]
[ext_resource path="res://sprites/circle.svg" type="Texture" id=24]
[ext_resource path="res://fonts/space-mono/Regular.ttf" type="DynamicFontData" id=25]

[sub_resource type="Shader" id=137]
code = "/* 
Earthbound battle backgrounds shader with scrolling effect and palette cycling like in the original game.
@retr0_dev
	
Apply the shader to a TextureRect or a Sprite. Use a texture with some shapes in a transparent background for best results.
You can then use a ColorRect or another method to paint the background.
You can use the shader on multiple TextureRects and obtain a double-buffer effect tweaking the values for each one, remember to Make Unique the shader material.
*/
shader_type canvas_item;
render_mode unshaded;

uniform float amplitude = 0.075;
uniform float frequency = 10.0;
uniform float speed = 2.0;
uniform float amplitude_vertical = 0.0;
uniform float frequency_vertical = 0.0;
uniform float speed_vertical = 0.0;
uniform vec2 scroll_direction = vec2(0.0, 0.0);
uniform float scrolling_speed = 0.08;
uniform bool enable_palette_cycling = false;
uniform sampler2D palette;
uniform float palette_speed = 0.1;

uniform sampler2D gradient: hint_black;
uniform float mix_amount;

float random (vec2 uv) {
    return fract(sin(dot(uv.xy,
        vec2(12.9898,78.233))) * 43758.5453123);
}


void fragment() {
	float diff_x = amplitude * sin((frequency * UV.y) + (speed * TIME));// * random(UV);
	float diff_y = amplitude_vertical * sin((frequency_vertical * UV.y)  + (speed_vertical * TIME)) * random(UV);
	vec2 scroll = scroll_direction * TIME * scrolling_speed;
	vec4 tex = texture(TEXTURE, vec2(UV.x + diff_x, UV.y + diff_y) + scroll);
	float palette_swap = mod(tex.r - TIME * palette_speed, 1.0);
	
	if (enable_palette_cycling)
	{
		COLOR = vec4(texture(palette, vec2(palette_swap, 0)).rgb, tex.a);
	}
	else COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=138]
shader = SubResource( 137 )
shader_param/amplitude = 0.0
shader_param/frequency = 16.0
shader_param/speed = 1.0
shader_param/amplitude_vertical = 0.0
shader_param/frequency_vertical = 0.0
shader_param/speed_vertical = 0.0
shader_param/scroll_direction = Vector2( -2, -3 )
shader_param/scrolling_speed = 0.05
shader_param/enable_palette_cycling = false
shader_param/palette_speed = 0.1
shader_param/mix_amount = 1.0

[sub_resource type="DynamicFont" id=39]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=40]
default_font = SubResource( 39 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.686275, 0.384314, 0.32549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.423529, 0.235294, 0.235294, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=41]
bg_color = Color( 0.643137, 0.317647, 0.25098, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.423529, 0.235294, 0.235294, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=109]
bg_color = Color( 0.32549, 0.180392, 0.0313726, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0.2, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=113]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 22 )

[sub_resource type="Theme" id=114]
default_font = SubResource( 113 )

[sub_resource type="StyleBoxFlat" id=112]
bg_color = Color( 0.439216, 0.254902, 0.0901961, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0.270588, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=110]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 22 )

[sub_resource type="Theme" id=111]
default_font = SubResource( 110 )

[sub_resource type="StyleBoxFlat" id=115]
bg_color = Color( 0.439216, 0.254902, 0.0901961, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.270588, 0.0392157, 0.0392157, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=124]
size = 35
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 22 )

[sub_resource type="Theme" id=125]
default_font = SubResource( 124 )

[sub_resource type="StyleBoxFlat" id=126]
bg_color = Color( 0.32549, 0.152941, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.243137, 0.0823529, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=123]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_space = -10
font_data = ExtResource( 17 )

[sub_resource type="Theme" id=119]
default_font = SubResource( 123 )

[sub_resource type="StyleBoxFlat" id=133]
bg_color = Color( 0.658824, 0.270588, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=121]
bg_color = Color( 0.384314, 0.215686, 0.172549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=122]
bg_color = Color( 0.27451, 0.121569, 0.0823529, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=120]
bg_color = Color( 0.443137, 0.262745, 0.168627, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=131]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 17 )

[sub_resource type="Theme" id=132]
default_font = SubResource( 131 )

[sub_resource type="StyleBoxFlat" id=130]
bg_color = Color( 0.392157, 0.392157, 0.392157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.243137, 0.0823529, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=5]
size = 75
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 22 )

[sub_resource type="Theme" id=127]
default_font = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=128]
bg_color = Color( 0.415686, 0.211765, 0, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.623529, 0.290196, 0.12549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.792157, 0.411765, 0.223529, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=139]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 25 )

[sub_resource type="Theme" id=140]
default_font = SubResource( 139 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1

[sub_resource type="StyleBoxFlat" id=136]
bg_color = Color( 0.635294, 0.184314, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.482353, 0.27451, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=135]
bg_color = Color( 0.396078, 0.113725, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.482353, 0.27451, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.454902, 0.129412, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 0.482353, 0.27451, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=116]
bg_color = Color( 0.4, 0.176471, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.760784, 0.482353, 0.294118, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=117]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = -1
extra_spacing_space = -5
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 117 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.372549, 0.301961, 0.235294, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Host" type="Node2D"]
script = ExtResource( 1 )

[node name="Environment" parent="." instance=ExtResource( 2 )]

[node name="Global" parent="." instance=ExtResource( 6 )]

[node name="MainBackground" type="Sprite" parent="."]
modulate = Color( 0.290196, 0.145098, 0.145098, 1 )
material = SubResource( 138 )
texture = ExtResource( 23 )
region_enabled = true
region_rect = Rect2( 0, 0, 2500, 7500 )
script = ExtResource( 21 )

[node name="Camera" type="Camera2D" parent="."]
rotating = true
current = true

[node name="ControlScreen" type="Node2D" parent="."]
visible = false
position = Vector2( 1920, 0 )

[node name="Blocks" type="Node2D" parent="ControlScreen"]
position = Vector2( 0, -465 )

[node name="Start" parent="ControlScreen/Blocks" instance=ExtResource( 12 )]
texture = ExtResource( 8 )

[node name="End" parent="ControlScreen/Blocks" instance=ExtResource( 11 )]
position = Vector2( 210, 0 )

[node name="Pointer" type="Label" parent="ControlScreen"]
margin_left = -25.0
margin_top = -400.0
margin_right = 25.0
margin_bottom = -300.0
theme = SubResource( 40 )
custom_colors/font_color = Color( 1, 0.466667, 0.164706, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "^"
align = 1
valign = 1

[node name="Next" type="Button" parent="ControlScreen"]
margin_left = 860.0
margin_top = -50.0
margin_right = 960.0
margin_bottom = 50.0
focus_mode = 0
custom_styles/hover = SubResource( 42 )
custom_styles/pressed = SubResource( 41 )
custom_styles/normal = SubResource( 41 )
enabled_focus_mode = 0
icon = ExtResource( 14 )
icon_align = 1
expand_icon = true
script = ExtResource( 15 )

[node name="Controls" type="Node2D" parent="ControlScreen"]
position = Vector2( 0, -350 )

[node name="Background" type="Panel" parent="ControlScreen/Controls"]
margin_left = -775.0
margin_right = 850.0
margin_bottom = 890.0
custom_styles/panel = SubResource( 109 )

[node name="intro" type="Control" parent="ControlScreen/Controls"]
visible = false
margin_left = -775.0
margin_right = 850.0
margin_bottom = 890.0
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Title" type="Label" parent="ControlScreen/Controls/intro"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1600.0
margin_bottom = 250.0
theme = SubResource( 114 )
custom_styles/normal = SubResource( 112 )
align = 1
valign = 1
autowrap = true

[node name="Subtitle" type="Label" parent="ControlScreen/Controls/intro"]
margin_left = 50.0
margin_top = 275.0
margin_right = 1575.0
margin_bottom = 850.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 111 )
custom_styles/normal = SubResource( 115 )
align = 1
valign = 1
autowrap = true

[node name="question" type="Control" parent="ControlScreen/Controls"]
visible = false
margin_left = -775.0
margin_right = -735.0
margin_bottom = 40.0
mouse_filter = 2

[node name="Scroll" type="ScrollContainer" parent="ControlScreen/Controls/question"]
visible = false
margin_left = 25.0
margin_top = 400.0
margin_right = 1612.0
margin_bottom = 875.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="ControlScreen/Controls/question/Scroll"]
margin_right = 1575.0
margin_bottom = 475.0
rect_min_size = Vector2( 1575, 475 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Template" type="Label" parent="ControlScreen/Controls/question/Scroll/VBox"]
visible = false
margin_right = 1575.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
mouse_filter = 0
theme = SubResource( 125 )
custom_styles/normal = SubResource( 126 )
text = "OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO"
align = 1
valign = 1
autowrap = true

[node name="Time" type="Label" parent="ControlScreen/Controls/question/Scroll/VBox/Template"]
show_behind_parent = true
margin_left = 1075.0
margin_right = 1225.0
margin_bottom = 150.0
theme = SubResource( 119 )
custom_styles/normal = SubResource( 133 )
text = "0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Subtract" type="Button" parent="ControlScreen/Controls/question/Scroll/VBox/Template"]
show_behind_parent = true
margin_left = 1225.0
margin_right = 1325.0
margin_bottom = 150.0
focus_mode = 0
custom_styles/hover = SubResource( 121 )
custom_styles/pressed = SubResource( 122 )
custom_styles/normal = SubResource( 122 )
enabled_focus_mode = 0
icon = ExtResource( 18 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Points" type="Label" parent="ControlScreen/Controls/question/Scroll/VBox/Template"]
show_behind_parent = true
margin_left = 1325.0
margin_right = 1475.0
margin_bottom = 150.0
theme = SubResource( 119 )
custom_styles/normal = SubResource( 120 )
text = "0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Add" type="Button" parent="ControlScreen/Controls/question/Scroll/VBox/Template"]
show_behind_parent = true
margin_left = 1475.0
margin_right = 1575.0
margin_bottom = 150.0
focus_mode = 0
custom_styles/hover = SubResource( 121 )
custom_styles/pressed = SubResource( 122 )
custom_styles/normal = SubResource( 122 )
enabled_focus_mode = 0
icon = ExtResource( 16 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Reserved" type="Label" parent="ControlScreen/Controls/question/Scroll/VBox"]
margin_right = 1575.0
margin_bottom = 100.0
rect_min_size = Vector2( 1575, 100 )
mouse_filter = 1
theme = SubResource( 132 )
custom_styles/normal = SubResource( 130 )
text = "CLOSE SUBMISSION"
align = 1
valign = 1

[node name="Content" type="Control" parent="ControlScreen/Controls/question"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Text" type="Label" parent="ControlScreen/Controls/question/Content"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1600.0
margin_bottom = 375.0
theme = SubResource( 127 )
custom_styles/normal = SubResource( 128 )
text = "dasdasdsdasas"
align = 1
valign = 1
clip_text = true

[node name="Image" type="TextureRect" parent="ControlScreen/Controls/question/Content"]
visible = false
margin_left = 25.0
margin_top = 25.0
margin_right = 1600.0
margin_bottom = 375.0
mouse_filter = 2
texture = ExtResource( 20 )
expand = true
stretch_mode = 6

[node name="StartScreen" type="Node2D" parent="."]

[node name="Message" type="Label" parent="StartScreen"]
margin_left = -625.0
margin_top = -500.0
margin_right = 625.0
margin_bottom = -350.0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Start" type="Button" parent="StartScreen"]
visible = false
margin_left = -1630.0
margin_top = 305.0
margin_right = -955.0
margin_bottom = 500.0
focus_mode = 0
theme = SubResource( 140 )
custom_styles/hover = SubResource( 136 )
custom_styles/pressed = SubResource( 135 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "START"
clip_text = true
icon_align = 1
script = ExtResource( 7 )

[node name="Players" type="ScrollContainer" parent="."]
visible = false
margin_left = -2880.0
margin_top = -500.0
margin_right = -1680.0
margin_bottom = 500.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/bg = SubResource( 116 )
scroll_horizontal_enabled = false
script = ExtResource( 19 )

[node name="VBox" type="VBoxContainer" parent="Players"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 10
alignment = 1

[node name="Template" type="Label" parent="Players/VBox"]
visible = false
margin_right = 1170.0
margin_bottom = 100.0
rect_min_size = Vector2( 1170, 100 )
theme = SubResource( 6 )
custom_colors/font_color = Color( 0.752941, 0.647059, 0.494118, 1 )
custom_styles/normal = SubResource( 9 )
text = "hehe"
align = 1
valign = 1

[node name="Subtract" type="Button" parent="Players/VBox/Template"]
visible = false
show_behind_parent = true
margin_left = 575.0
margin_right = 675.0
margin_bottom = 100.0
focus_mode = 0
custom_styles/hover = SubResource( 121 )
custom_styles/pressed = SubResource( 122 )
custom_styles/normal = SubResource( 122 )
enabled_focus_mode = 0
icon = ExtResource( 18 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Points" type="Label" parent="Players/VBox/Template"]
show_behind_parent = true
margin_left = 850.0
margin_right = 1000.0
margin_bottom = 100.0
theme = SubResource( 119 )
custom_styles/normal = SubResource( 120 )
text = "0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Add" type="Button" parent="Players/VBox/Template"]
visible = false
show_behind_parent = true
margin_left = 625.0
margin_right = 725.0
margin_bottom = 100.0
focus_mode = 0
custom_styles/hover = SubResource( 121 )
custom_styles/pressed = SubResource( 122 )
custom_styles/normal = SubResource( 122 )
enabled_focus_mode = 0
icon = ExtResource( 16 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ServerAdvertiser" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Templates" type="Node" parent="."]

[node name="question" parent="Templates" instance=ExtResource( 10 )]
visible = false
position = Vector2( 210, -250 )

[node name="intro" parent="Templates" instance=ExtResource( 9 )]
visible = false
position = Vector2( 0, -250 )

[node name="LoadCircle" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 3, 3 )
texture = ExtResource( 24 )
